# daemon-choir

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
daemon/: Cargo.toml
playback/: Cargo.toml
playback/src/: lib.rs
src/: main.rs
